# pico_simple_servo

./: .gitignore  LICENSE  README.md
.cache/clangd/index/: example.c.606719B8D897C1BD.idx  simple_servo.c.217541655B8D67FC.idx
example/: CMakeLists.txt  example.c
include/: simple_servo.h
src/: simple_servo.c
